--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,14 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.titulo{ 
+    color:#34495e;
+}
+
+.subtitulo{
+    color: #85929e; 
+}
+.ltr_pequenia{
+    font-size:12px;
+}
